# wavelet-compression

./: CMakeLists.txt  README.md  TODO.txt  argparse.cpp  argparse.h  box-structs.h  calc-loss.cpp  calc-loss.h  compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  deps.txt  grid.h  iterator.h  main.cpp  modes.cpp  preprocess.cpp  preprocess.h  readandwrite.cpp  readandwrite.h  tmpdir.h  writeplotfile.cpp  writeplotfile.h
src/: argparse.cpp  box-structs.h  calc-loss.cpp  calc-loss.h  compressor.cpp  compressor.h  decompressor.cpp  grid.h  main.cpp  modes.cpp  modes.h  preprocess.cpp  readandwrite.cpp  readandwrite.h  writeplotfile.cpp  writeplotfile.h
tests/plt00074/: Header
tests/plt00075/: Header
tests/plt00075/Level_0/: Cell_D_00000  Cell_H
